# shadowsocks-yamux-plugin

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  opt.rs  yamux-plugin-local.rs  yamux-plugin-server.rs
src/sys/: mod.rs
src/sys/unix/: freebsd.rs  linux.rs  macos.rs  mod.rs
src/sys/windows/: mod.rs
