[package]
name = "shadowsocks-yamux-plugin"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "yamux-plugin-local"
path = "src/yamux-plugin-local.rs"

[[bin]]
name = "yamux-plugin-server"
path = "src/yamux-plugin-server.rs"

[features]
mimalloc = ["dep:mimalloc"]

[dependencies]
tokio = { version = "1.21.2", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tokio-yamux = "0.3.7"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "env-filter",
    "time",
    "local-time",
] }
time = "0.3"
futures = "0.3.24"
log = "0.4.17"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "1.0"
libc = { version = "0.2", features = ["extra_traits"] }
once_cell = "1.17"
lru_time_cache = "0.11"
shadowsocks = { version = "1.23", default-features = false, features = [
    "hickory-dns",
] }
mimalloc = { version = "0.1.41", optional = true }
